testdata/corset/valid/sorted_01.lisp
(defcolumns (W0 :i16@prove))
(defsorted s1 ((↓ W0)))
(defsorted s2 ((+ W0)))
